# CODEX-PLATEFORM-APP-BUILDER

./: .replit  README.md  monetization.py  pyproject.toml
ai_assistant/: anomaly_detector.py  auto_refinement_loop.py  correction_agent.py  internal_review_agent.py  platform_orchestrator.py
api/: auth_manager.py  rate_limiter.py  rest_endpoints.py  usage_logger.py  websocket_handler.py
archive/: oral_structure_mapper.py  proverb_index.py  story_index.py  symbolism_database.py
backend/: __init__.py
configs/: apbuilder.settings.example.yaml  settings.example.yaml
core/: engine_controller.py  platform_modes.py  request_router.py  response_formatter.py  session_manager.py  state_manager.py
database/: full_schema.sql  schema.sql
deployment/: docker-compose.yml
docs/: AI_VOIX_AFRICA_FIRST_MASTER_SPECIFICATIONS.md  KRIOL_GB_V4_MASTER_SYSTEM.md  apbuilder_app_overview.md  apbuilder_one_click_access.md  api_architecture.md  book_of_charge_apbuilder.md  book_of_charge_consolidated.md  dataset_blueprint.md  language_system_rules_kriol_guinea.md  replit_deploy.md  rest_api_blueprint.md  voice_labs_framework.md
enforcement/: anti_drift_engine.py  base_reference_guard.py  foreign_injection_detector.py  ntopy4_enforcer.py  structure_lock.py
integrity/: anti_drift_engine.js  canonical_resolver.js  pattern_monitor.js
linguistic/: canonical_normalizer.py  dictionary_index.py  grammar_operator_validator.py  ntopy4_parser.py
multilingual/: accent_stability_layer.py  identity_preserver.py  tonal_consistency_validator.py  translation_router.py
orchestrator/: __init__.py  capabilities.py  (+7 more)
(+104 files in other folders)
