[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apbuilder-app"
version = "0.1.0"
description = "APBUILDER.APP - unified AI app and web builder platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0"
]

[tool.setuptools]
py-modules = ["monetization"]

[tool.setuptools.packages.find]
include = [
  "ai_assistant*",
  "api*",
  "archive*",
  "core*",
  "enforcement*",
  "multilingual*",
  "validation*",
  "voice*"
]
exclude = [
  "testing*",
  "frontend*",
  "integrity*",
  "deployment*",
  "configs*",
  "docs*",
  "database*",
  "schemas*"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
